fix: Abyss: Fixed issues on Windows with double borders and white space above toolbar
rn=

(integrated from master branch change ea0e221 by Nathan Rijksen <nathanr@activestate.com>)

--- a/src/modules/abyss_skin/content/platform/win/platform.less
+++ b/src/modules/abyss_skin/content/platform/win/platform.less
@@ -26,3 +26,17 @@ menuitem.languageicon[type="checkbox"] image
     margin-left: 22px !important;
     margin-right: 4px !important;
 }
+
+view tabbox:not(.tabs-bottom) > tabpanels,
+#workspace_bottom_area,
+#statusbarviewbox,
+#customizingPlaceHolder
+{
+    border-left: 0 !important;
+    border-right: 0 !important;
+}
+
+#komodo-box
+{
+    padding-top: 0 !important;
+}
